2004-08-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genAnd, genOr, transferAopAop, rmwWithAop): optimized
	code generation
	* src/hc08/gen.c (genrshFour, genCpl): fixed bugs
	* src/hc08/gen.c (genMultOneByte, genDivOneByte, genModOneByte): fixed
	bugs, ported much of Bernhard's code from mcs51
	* src/mcs51/gen.c (genSend),
	* src/hc08/gen.c (genSend): fixed bug with lost SEND iCodes if more
	than one when calling a reentrant function
	* device/lib/_mullong.c: defined an alternate struct layout for big
	endian ports (hc08)

2004-08-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (shiftL2Left2Result): fix for bug-500536 regression
	test

2004-08-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncArgs): make sure parameter types
	are sane and complete before asking the port its prefered parameter
	passing method (fixes bug #1017633)
	* device/lib/hc08/_ret.c: added "data" storage class to _ret2
	and _ret3

2004-08-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPackBitsImmed, genUnpackBitsImmed): fix offset
	problem in bitfields >= 8 bits.

2004-08-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c: undid changes that were not meant to be committed

2004-08-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/hc08spec.mk: REENTRANT must be reentrant

2004-08-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genUminusFloat): fixed bug where only 3 bytes were
	  copied and wrong bit got inverted

2004-08-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genPointerSet, genFarPointerSet): moved code from
	genFarPointerSet into genPointerSet; eliminated genFarPointerSet
	* src/hc08/gen.c (genPointerGet, genFarPointerGet): moved code from
	genFarPointerGet into genPointerGet; eliminated genFarPointerGet
	* src/hc08/gen.c (genPackBitsImmed): generate optimized code for